--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "type": "module",
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@clerk/express": "^1.4.17",
     "cloudinary": "^2.6.1",
